Fixed mobile layout problems

--- a/website/src/css/css-global/structure.css
+++ b/website/src/css/css-global/structure.css
@@ -64,14 +64,10 @@
   width: 100%;
   max-width: 1000px;
   margin: 0 auto;
+  /*
   border-left: 1px solid red;
   border-right: 1px solid red;
-}
-
-.imp-flex {
-  display: inline-flex;
-  justify-content: center;
-  flex-direction: column;
+  */
 }
 
 /*
