--- a/website/src/css/home-page/welcome.css
+++ b/website/src/css/home-page/welcome.css
@@ -66,7 +66,7 @@
 
 .wel-highlight-title {
   /* Title of highlight item */
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .wel-highlight-txt {
@@ -86,13 +86,22 @@
 */
 @media screen and (max-width: 510px) {
   .wel-highlight-item {
-    padding: 20px 0;
+    margin: 20px 0px;
     width: 100%;
     max-width: 100%;
   }
 
   .wel-highlights {
     flex-direction: column;
+  }
+
+  .wel-highlight-btm-border::after {
+    content: "";
+    display: flex;
+    margin: 40px auto 0 auto;
+    width: 85%;
+    height: 0px;
+    border: 1px solid var(--color-5-dark-blue);
   }
 }
 
